--- a/content/publication/conference-paper/cite.bib
+++ b/content/publication/conference-paper/cite.bib
@@ -1,8 +1,8 @@
-@inproceedings{example1,
-  title={An example conference paper},
-  author={Bighetti, Nelson and Ford, Robert},
-  booktitle={Source Themes Conference},
-  pages={1--6},
-  year={2013},
-  organization={IEEE}
+@inproceedings{
+wan2022handmethat,
+title={HandMeThat: Human-Robot Communication in Physical and Social Environments},
+author={Yanming Wan and Jiayuan Mao and Joshua B. Tenenbaum},
+booktitle={Thirty-sixth Conference on Neural Information Processing Systems Datasets and Benchmarks Track},
+year={2022},
+url={https://openreview.net/forum?id=nUTemM6v9sv}
 }
